<resources>
    <string name="app_name">快龟约车司机版</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="pwd">密码&#160;&#160;&#160;&#160;&#160;</string>
    <string name="phone_hint">请输入您的手机号</string>
    <string name="code_hint">请输入验证码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="pwd_again_hint">请再次输入密码</string>
    <string name="code_get">获取验证码</string>
    <string name="login_vcode_hint">使用验证码登录</string>
    <string name="login_pwd_hint">使用账号密码登录</string>
    <string name="config_pwd_title">设置密码</string>
    <string name="login_title">快龟约车-司机</string>
    <string name="user_agreement">用户协议</string>
    <string name="contact_us">联系我们</string>
    <string name="about_us">关于我们</string>
    <string name="order_title">听单</string>
    <string name="order_wait_tab">待接单</string>
    <string name="order_complete_tab">已接单</string>
    <string name="today_performance">今日绩效</string>
    <string name="confirm_order_tip">如果您在1分钟内您没有接单，将会被扣款！</string>
    <string name="app_update">版本更新</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="reason">原因</string>
    <string name="advice">意见反馈</string>
    <string name="my_performance">我的绩效</string>
    <string name="call_center">客服中心</string>

    <string name="open_authority_in_call">请在设置——应用——快龟约车-司机 里开启电话权限</string>
    <string name="open_authority_in_location">请在设置——应用——快龟约车-司机 里开启定位权限</string>
    <string name="permission_call_phone_des">开启电话权限以便联系乘客</string>
    <string name="protocol_txt">        贵州快龟前行网络科技有限公司（以下称“我司”）根据您的出行需求向您提供网约车服务，您访问和使用有关网站、服务、应用程序提供的网约车预约服务适用本用户服务协议（以下简称“协议”）。
在您注册、使用有关网站、应用程序及接受我司提供的网约车服务之前，请您认真阅读本协议。您选择并使用服务即视为您已充分阅读并接受本协议的所有条款，您同意本协议对您和我司具有法律约束力。
\n第一条 用户注册
\n1.1为使用我司服务，您须在移动设备上下载“快龟约车”应用程序（以下称“快龟约车平台”）并进行注册，注册时您必须保证提供真实有效的信息、移动电话号码等，您知晓并同意，您一经成为快龟约车平台注册用户，将会默认开通我司服务账户，账号及密码默认为快龟约车平台账户的账号及密码。
\n1.2如果您是代表个人签订本协议，您应具有完全民事行为能力；如果您是代表法人实体签订本协议，您应获得授权并遵守本《用户服务协议》（并约束该法人实体）。
\n第二条 服务内容
\n您委托我司根据您的出行需求向您提供网约车服务。您可通过下载并安装到移动设备上的“快龟约车”应用程序选择并使用上述服务。
\n第三条 合同订立
\n您理解并同意，您通过快龟约车平台选择并使用我们的服务，即视为接受本《用户服务协议》并依据本协议与我司达成了合约（以下简称“合约”）。
\n第四条 服务使用
\n4.1您可以通过快龟约车平台预约专车/快车服务。我司将按照您的预约信息提供网约车服务。
\n4.2我司将做出合理的努力，让您获得服务。但这受制于您请求服务之时所在位置周边是否有可提供服务的车辆。
\n第五条 担保及承诺
\n5.1您担保，您向我们提供的信息真实、准确、完整。我们在任何时候都有权验证您所提供的信息，并有权在不提供任何理由的情况下拒绝向您提供服务或拒绝您使用有关网站、服务、应用程序。
\n5.2您使用我司服务或快龟约车平台，即表示您还同意以下事项：
   \n您出于您个人用途使用服务或下载应用程序，并且不会转售给第三方
   \n您不会将服务或应用程序用于非法目的，包括（但不限于）发送或存储任何非法资料或者用于欺诈目的
   \n您不会利用服务或应用程序骚扰、妨碍他人或造成不便；
   \n您不会影响网络的正常运行；
   \n您不会尝试危害服务或应用程序；
   \n当我们提出合理请求时，您会提供身份证明；
   \n您将遵守国家/地区以及您在使用应用程序或服务时所处国家/地区、省和/或市的所有适用法律。
\n5.3如果您违反以上任一约定，我们保留立即终止向您提供服务和拒绝您使用有关网站、服务、应用程序的权利。
 \n第六条 付款及发票
 \n6.1您同意并认可快龟约车平台现行公示或未来更新的有关服务价格标准，您可以在网站上或快龟约车平台上查看有关服务的价格。这些价格可能会随时更新，您必须自行留意服务的价格。
\n6.2您在使用服务后应根据快龟约车平台提示及时支付费用。逾期不支付费用且经催告后仍不履行支付义务的，我司有权拒绝您继续使用服务，同时您知悉并同意我司有权视情况将您的违约信息提交第三方征信机构。
\n6.3您在快龟约车平台可以使用您的第三方电子支付账户（包括但不限于微信支付账户或支付宝支付账户）进行支付。处理您使用服务相关的付款时，除了受到本《用户服务协议》的约束之外，还要受电子支付服务商及信用卡/借记卡发卡行的条款和政策的约束。我们对于电子支付服务商或银行发生的错误不承担责任。我们将获取与您使用服务相关的特定交易明细。在使用这些信息时我们将严格遵守相关法律法规和公司的各项政策。
\n6.4在您提出开具发票的要求时，我们将为您开具发票，具体发票开具及申请规则，请参见应用程序上所列示的开票说明。
\n6.5我们提供订单管理功能，您可以随时通过手机应用端查询订单情况。您应在每次服务完成后及时查询实际付款情况，如有异议应当在服务完成后48小时内联系我们，我们将对您提出的异议进行解释和处理。
\n第七条 赔偿
\n您使用快龟约车平台的各应用程序及服务，即表示您接受本《用户服务协议》并同意：对于因以下事项产生的或与以下事项相关的任何及所有索赔、费用、赔偿、损失、债务和开销（包括但不限于律师费和诉讼费），您应该予以赔偿：
\n您触犯或违反本《用户服务协议》中的任何条款或任何适用的法律法规（无论此处是否提及）；
 \n您触犯任何第三方的任何权利；
 \n您滥用应用程序或服务。
\n第八条 责任
\n8.1在网站或快龟约车平台上向您提供的信息、推荐的服务仅供您参考。我们将在合理的范围内尽力保证该等信息准确，但无法保证其中没有任何错误、缺陷、恶意软件和病毒。对于因使用（或无法使用）网站或快龟约车平台导致的任何损害（但排除死亡或人身伤害），我们不承担责任（除非此类损害是由我们的故意或重大过失造成的）。此外，对于因使用（或无法使用）与网站或快龟约车平台的电子通信手段导致的任何损害，包括（但不限于）因电子通信传达失败或延时、第三方或用于电子通信的计算机程序对电子通信的拦截或操纵，以及病毒传输导致的损害，我们不承担责任。
\n8.2您知悉并确认，您通过快龟约车平台预约的网约车服务由驾驶员以我司的名义向您提供并对服务质量予以保证。我司将在合理范围内承担相应的责任。同时，为提升服务品质，承担企业社会责任，我司将为您提供相应的服务保障（具体请参见附件一《专快车安全保障执行细则》），例如对于交通事故、治安事故或其他意外事故，我司将提供先行垫付、陪护及主动安全保障。对于超出法律规定应当赔偿的部分或存在侵权责任人、违约责任人的，我司有权向有关当事人追偿。
 \n第九条 授权及许可
 \n9.1在您遵守本《用户服务协议》的前提下，我们授予您有限的、非排他性的、不可转让的如下许可：
 \n以将一份应用程序副本下载并安装到您拥有或控制的单台移动设备上，并仅出于您自己的个人用途运行此应用程序副本。您不得：（1）以任何方式许可、再许可、出售、转售、转让、分配、分发服务或应用程序，或以其他方式进行商业开发或提供给任何第三方；（2）修改服务或应用程序，或者据此创建衍生产品；（3）创建指向服务的互联网“链接”，或在任何其他服务器或基于无线或互联网的设备上“设计”或“镜像”任何应用程序；（4）反向工程或访问应用程序设计或构建竞争产品或服务、使用类似于服务或应用程序的设想或图形来设计或构建产品，或抄袭服务或应用程序的任何设想、特点、功能或图形，或（5）启动自动程序或脚本，每秒发送多个服务器请求或过度加重服务或应用程序负担或妨碍其工作和/或性能的程序。
\n9.2此外，您不得：（1）发送垃圾邮件或者以其他形式违反适用法律的重复或不受欢迎的邮件；（2）发送或存储侵权、淫秽、威胁、诽谤或者其他非法或侵权资料，包括危害儿童或触犯第三方隐私权的资料；（3）发送或存储包含软件病毒、蠕虫、木马或其他有害的计算机代码、文件、脚本、代理或程序的资料；（4）阻挠或扰乱网站、应用程序、服务或其所含数据的完整性或性能；（5）尝试未经授权地访问网站、应用程序、服务或其相关系统或网络。
\n9.3在法律允许的最大范围内，我们将有权调查并起诉任何上述违法违规行为。我们可参与并协助执法部门起诉违反本《用户服务协议》的用户。如果我们认为任何内容违反本《用户服务协议》或以其他方式危害网站、平台及/或其中的服务或应用程序，我们保留在不另行通知的情况下随时删除或禁用对这些内容的访问权限的权利。
\n第十条 知识产权政策
\n我们遵守各类适用的知识产权法律法规，并希望用户也遵守。
\n第十一条 第三方链接
\n在您使用网站、应用程序期间，我们可能会不时地提供由第三方拥有并控制的网站链接，以便您跟第三方沟通，向其购买产品或服务，参加其提供的促销活动。该等链接会带领您离开网站、快龟约车平台，并且该等链接所指向的第三方网站内容不在我们的控制范围之内，这些第三方网站各自订立了条款、条件和隐私政策。因此，我们不会对这些网站的内容和活动负责，也不会承担任何义务，您应充分理解该等网站的内容及活动并自己全力承担浏览或访问这些网站的法律责任及风险。
\n第十二条 合约期限
\n12.1我们和您订立的这份合约是无固定期限合约。
\n12.2您有权随时通过永久性删除智能手机上安装的应用程序来终止合约，这样将禁止您使用快龟约车平台及其中的应用程序和服务。您可以随时按照我们网站上的说明注销用户账户。
\n12.3如果您做出以下行为，我们有权随时终止合约并立即生效（即禁止您使用应用程序和服务）：
\n您触犯或违反本《用户服务协议》中的任何条款；
\n我们认为，您滥用应用程序或服务。我们没有义务提前通知合约终止。终止合约之后，我们将按照本《用户服务协议》给出相关通知。
\n第十三条 不可抗力
\n遭受不可抗力事件的一方可暂行中止履行本协议项下的义务直至不可抗力事件的影响消除为止，并且无需为此承担违约责任，但应尽最大努力克服该事件，减少损失的扩大。不可抗力指各方不能控制、不可预见或即使预见亦无法避免的事件，该事件足以妨碍、影响或延误任何一方根据本协议履行其全部或部分义务。该事件包括但不限于自然灾害、战争、政策变化、计算机病毒、黑客攻击或电信机构服务中断造成的事件。
\n第十四条 隐私政策
\n快龟约车非常重视对您的个人隐私保护，我们将按照本隐私政策（以下称“本政策”)收集、使用、共享和保护您的个人信息。在您使用快龟约车的产品及服务前，请您仔细阅读并全面了解本政策。如果您是未成年人，您的监护人需要仔细阅读本政策并同意您依照本政策使用我们的产品及服务。对于本政策中与您的权益存在重大关系的条款，我们已将字体加粗以提示您注意。当您浏览、访问快龟约车平台及/或使用快龟约车的任一产品或服务时，即表示您已经同意我们按照本政策来收集、使用、共享和保护您的个人信息。
信息的收集范围
\n您授权我们收集您的以下个人信息：
\n身份识别信息，包括但不限于您的姓名、身份证明、联系地址、电话号码、生物特征信息；对于司机类用户，除身份识别信息以外，我们还会收集您的公司、车辆、行驶证、驾驶证以及监督卡信息；
\n您所处的地理位置及目的地信息；
\n平台操作信息，包括但不限于您的IP地址、设备型号、设备标识符、操作系统版本信息；
\n行程信息，包括但不限于您的出发地、到达地、路线、途经地点及里程数信息；
\n支付信息，包括但不限于您的支付时间、支付金额、支付工具、银行账户及支付账户信息；
\n
\n第十五条 其他
\n15.1如果本《用户服务协议》的某一（些）条款被认定为无效而其他条款仍能保持有效且其执行不受影响，我们可决定是否继续履行该等其他条款。
\n15.2我们保留随时修改或替换本《用户服务协议》条款，或者更改、暂停或中断服务或应用程序（包括但不限于，任何功能、数据库或内容的可用性）的权利。届时，我们只需在网站及/或快龟约车平台上发布通告或发送通知。您如果不同意我们对本《用户服务协议》所做的修改，您有权停止使用服务。如果您继续使用服务，则视为您接受我们对本《用户服务协议》所做的修改。
\n15.3我们可以通过以下途径发送通知：在网站及/或快龟约车平台上张贴一般通知；按照您在账户信息中登记的电子邮件地址或电话发送电子邮件或短信
\n15.4事先未经我们的书面同意，您不得转让本《用户服务协议》中的权利。
\n第十六条 管辖约定
\n本《用户服务协议》适用中国法律。关于本《用户服务协议》的违约、终止、履行、解释或有效性，或者网站、快龟约车平台的使用所产生的或与其相关的任何冲突、赔偿或纠纷（统称为“争议”），由贵州快龟前行科技有限公司所在地人民法院管辖。
</string>

</resources>
