<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_fafafa"
              android:orientation="vertical">

    <include layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:id="@+id/app_update_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:layout_marginTop="@dimen/space_10"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/space_20"
        android:paddingRight="@dimen/space_20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_update"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_16"
            />

        <TextView
            android:id="@+id/app_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/space_5"
            android:drawableRight="@drawable/pre1"
            android:textColor="@color/color_808080"
            android:textSize="@dimen/font_16"
            tools:text="V1.0"/>

    </LinearLayout>

    <View
        style="@style/horizontal_line"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"/>

    <LinearLayout
        android:id="@+id/about_us_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/space_20"
        android:paddingRight="@dimen/space_20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_us"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_16"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pre1"
            android:textColor="@color/color_808080"
            android:textSize="@dimen/font_16"/>
    </LinearLayout>

    <TextView
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center"
        android:background="@color/color_white"
        android:text="@string/logout"
        android:textColor="@color/color_1bb671"
        android:textSize="@dimen/font_16"/>

</LinearLayout>